--- a/index.ejs
+++ b/index.ejs
@@ -5,6 +5,6 @@
         <title>Hello Rust!</title>
     </head>
     <body>
-        <h1 id="title">Hello from html!</h1>
+        <canvas id="webgl" width="640" height="480"></canvas>
     </body>
 </html>
