--- a/index.ejs
+++ b/index.ejs
@@ -2,7 +2,7 @@
 <html>
     <head>
         <meta charset="utf-8">
-        <title>Hello Rust!</title>
+        <title>Rust WebGl Rendering</title>
     </head>
     <body>
         <canvas id="webgl" width="640" height="480"></canvas>
